backport mailer, forgot password endpoints
