# internal/api/handlers/handlers.go
@@ -11,6 +11,8 @@ import (
 func AttachAllRoutes(s *api.Server) {
 	// attach our routes
 	auth.PostChangePasswordRoute(s)
+	auth.PostForgotPasswordCompleteRoute(s)
+	auth.PostForgotPasswordRoute(s)
 	auth.PostLoginRoute(s)
 	auth.PostLogoutRoute(s)
 	auth.PostRefreshRoute(s)
