# internal/types/validations.go
@@ -341,6 +341,131 @@ func (m *PostChangePasswordPayload) UnmarshalBinary(b []byte) error {
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
 
+// Validate validates this post forgot password complete payload
+func (m *PostForgotPasswordCompletePayload) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validatePassword(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateToken(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PostForgotPasswordCompletePayload) validatePassword(formats strfmt.Registry) error {
+
+	if err := validate.Required("password", "body", m.Password); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("password", "body", string(*m.Password), 1); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PostForgotPasswordCompletePayload) validateToken(formats strfmt.Registry) error {
+
+	if err := validate.Required("token", "body", m.Token); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("token", "body", "uuid4", m.Token.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PostForgotPasswordCompletePayload) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PostForgotPasswordCompletePayload) UnmarshalBinary(b []byte) error {
+	var res PostForgotPasswordCompletePayload
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
+
+// Code generated by go-swagger; DO NOT EDIT.
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+// Validate validates this post forgot password payload
+func (m *PostForgotPasswordPayload) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateUsername(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PostForgotPasswordPayload) validateUsername(formats strfmt.Registry) error {
+
+	if err := validate.Required("username", "body", m.Username); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("username", "body", string(*m.Username), 1); err != nil {
+		return err
+	}
+
+	if err := validate.MaxLength("username", "body", string(*m.Username), 255); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("username", "body", "email", m.Username.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PostForgotPasswordPayload) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PostForgotPasswordPayload) UnmarshalBinary(b []byte) error {
+	var res PostForgotPasswordPayload
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
+
+// Code generated by go-swagger; DO NOT EDIT.
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
 // Validate validates this post login payload
 func (m *PostLoginPayload) Validate(formats strfmt.Registry) error {
 	var res []error
